--- a/css/index.css
+++ b/css/index.css
@@ -82,10 +82,10 @@ li:hover {
 }
 
 .box {
-    background-color: #FFF;
-    padding: 12px 20px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  padding: 12px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 input[type="text"] {
@@ -110,7 +110,7 @@ input[type="submit"] {
 }
 
 textarea {
-    width: 100%;
+  width: 100%;
   padding: 50px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -118,7 +118,6 @@ textarea {
   border-radius: 5px;
   box-sizing: border-box;
 }
-
 
 .fondo {
   height: 300px;
@@ -131,5 +130,22 @@ textarea {
 }
 
 .shad {
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.text {
+  color: white;
+  text-shadow: 0px 1px 2px rgba(255, 0, 0, 0.9);
+}
+
+.trans {
+  position: relative;
+  left: 50px;
+  top: 50px;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
+  transform: skew(25deg, 10deg);
 }
