terminando transitions y transforms

--- a/css/index.css
+++ b/css/index.css
@@ -149,3 +149,28 @@ textarea {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
   transform: skew(25deg, 10deg);
 }
+
+.trans3d {
+  position: relative;
+  
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
+  transform: rotateX(30deg);
+}
+
+.transa {
+  position: relative;
+  left: 50px;
+  top: 50px;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
+  transition: 0.3s 0.1s;
+}
+.transa:hover {
+  transform: scale(1.05, 1.05);
+  background-color: rgba(0, 0, 0, 0.1);
+} 
