--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,3 +1,11 @@
 body {
     background-color: #eee;
+    width: 200px;
+}
+
+
+.flex {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
